Actualiza URLs de ejercicio de diseño SFA

--- a/libro/Ejercicios.tex
+++ b/libro/Ejercicios.tex
@@ -580,9 +580,9 @@ Elija los valores adecuados de $C_A$ y $C_S$ para cada tipología y
 dimensione el generador fotovoltaico y sistema de acumulación,
 empleando el módulo KC65T%
 \footnote{Información disponible en
-  \url{http://www.kyocerasolar.com/assets/001/5170.pdf}.} 
+  \url{https://www.kyocerasolar.com/dealers/product-center/archives/spec-sheets/KC65T.pdf}.} 
 y la gama PowerSafe OPzS%
-\footnote{Información disponible en \url{http://www.enersys-emea.com/reserve/pdf/EN-OPzS-RS-005_0111.pdf}}. Al dimensionar, especifique que
+\footnote{Información disponible en \url{http://www.enersys-emea.com/reserve/pdf/EN-OPzS-RS-005_1011.pdf}}. Al dimensionar, especifique que
 configuración eléctrica de generador y sistema de acumulación es
 necesario utilizar en cada tipología.
 
